--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "bugs": {
     "url": "https://github.com/RavenCommunity/kawpow-stratum-pool/issues"
   },
-  "bundleDependencies": {
-  "logger": "0.0.1"
-  },
+  "bundleDependencies": [
+    "logger"
+  ],
   "contributors": [
     {
       "name": "Jeremy Anderson"
@@ -56,6 +56,7 @@
     "bignum": "^0.13.1",
     "bitcoinjs-lib": "git+https://github.com/bitcoinjs/bitcoinjs-lib.git",
     "merkle-bitcoin": "git+https://github.com/Nur1Labs/merkle-bitcoin.git",
+    "multi-hashing": "github:MIPPL/x25x-multi-hashing",
     "promise": "*",
     "sha3": "*"
   },
